[tool.poetry]
name = "ddt"
version = "0.1.0"
description = "Development Driven Testing"
authors = ["James Hatfield <jahatfi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
coverage = "^7.4.0"
black = "^23.12.1"
pandas = "2.0.0"
pyarrow = "^14.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
