[tool.poetry]
name = "ddt"
version = "0.1.0"
description = "Development Driven Testing"
authors = ["James Hatfield <jahatfi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.4.0"
black = "^24.0"
pandas = "2.0.0"
pyarrow = "^14.0.2"
mypy = "^1.8.0"
pylint = "^3.1.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs=[
"src",
"decorator",
"paper",
]

